umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_gd+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Gd#c+3#u7"} :bonds [] :charge 3 :spin "#u7 #s8"}} :counts {:success true :output {:atoms {"0" "Gd#c+3#n3#u"} :bonds [] :charge 3 :spin "#u1 #s2"}}}
